# loc-viewer

./: .graphqlrc.yml  Cargo.toml  README.md  index.html
.github/: labeler.yml
.github/actions/versions/: action.yml
.github/workflows/: master.yml  pullrequest.yml
dev/: setup.sh
gql/: repository.gql
scripts/: dev-serve.sh  prod-build.sh  setup.sh
src/: lib.rs  main.rs
src/components/: background.rs  darkmode.rs  forms.rs  home.rs  mod.rs  navbar.rs  query_parameters.rs  routes.rs  statistics.rs
src/error/: convert.rs  mod.rs  render.rs  repository.rs
src/github/: blob.rs  client.rs  mod.rs  models.rs  repository.rs  statistics.rs
src/loc/: mod.rs  repository.rs
src/repository/: github.rs
tools/: dev-serve.sh  prod-build.sh  setup.sh
