[package]
name = "loc-viwer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
wasm-bindgen-futures = "0.4"

tokei = "12.1"
# octocrab = "0.38"
octocrab = { version = "0.38", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
