[package]
name = "tokei-toukei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-autoprops = "0.4"
yew_icons = { version = "0.8", features = [
    "heroicons_solid",
    "heroicons_outline",
    "octicons",
] }
gloo = "0.11"
web-sys = { version = "0.3", features = ["MediaQueryList"] }
wasm-bindgen-futures = "0.4"

tokei = "12.1"
octocrab = { version = "0.38", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
base64 = "0.22"
futures = "0.3"
async-stream = "0.3"

url = "2.5"
# num_cpus = "1.16"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
